{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 72,
  "lineage": "f24f606c-41c1-ee36-31b5-02033e9def98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aca_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039d429e317d89771",
            "association_id": "eipassoc-0da11c6a02fba1e36",
            "domain": "vpc",
            "id": "eipalloc-039d429e317d89771",
            "instance": "i-01b9565da12c99c70",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038741431e05139eb",
            "private_dns": "ip-172-31-95-33.ec2.internal",
            "private_ip": "172.31.95.33",
            "public_dns": "ec2-44-196-97-49.compute-1.amazonaws.com",
            "public_ip": "44.196.97.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aca_web_eip"
            },
            "tags_all": {
              "Name": "aca_web_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe0238291c8e3f07",
            "arn": "arn:aws:ec2:us-east-1:261826424086:instance/i-01b9565da12c99c70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b9565da12c99c70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aca _evops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038741431e05139eb",
            "private_dns": "ip-172-31-95-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.33",
            "public_dns": "ec2-44-196-97-49.compute-1.amazonaws.com",
            "public_ip": "44.196.97.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03999dfe500dafffe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_http"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fcf1883113065ba",
            "tags": {
              "Name": "aca_web"
            },
            "tags_all": {
              "Name": "aca_web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0311942d3069f80f7"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261826424086:security-group/sg-0311942d3069f80f7",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0311942d3069f80f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "261826424086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH_HTTP"
            },
            "tags_all": {
              "Name": "SSH_HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ac266e5928a688f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261826424086:security-group/sg-0fb965486044ab6b7",
            "description": "Allow sql traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb965486044ab6b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/12"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg1",
            "name_prefix": "",
            "owner_id": "261826424086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "local_only_mysql"
            },
            "tags_all": {
              "Name": "local_only_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ac266e5928a688f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}